# TFM_DRC

./: README.md
ESP32_auto_pairing/: AUTOpairing_common.h  ESP32_auto_pairing.ino
espnow_project_class/: CMakeLists.txt  README.md  partitions_two_ota.csv  sdkconfig  sdkconfig.old
espnow_project_class/core/: CMakeLists.txt
espnow_project_class/core/inc/: ADConeshot.h  AUTOpairing.h  AUTOpairing_common.h  AnomalyDetection.h  OTAupdate.h
espnow_project_class/core/src/: main.cpp
presentacion/: DANIEL_RODRIGUEZ_CARRION_TFM_presentation.pptx  DANIEL_RODRIGUEZ_CARRION_TFM_presentation_FULL.pptx
